src/test/deca/syntax/valid/HelloWorld/ListInst-1Inst.deca
// Description:
//    tests de programme vide.
//
// Resultats:
//    test_lex ne doit pas donner d'erreur.
//
// Historique:
//    cree le 05/01/2022

{ println("only one instruction here");
}
