src/test/deca/syntax/invalid/HelloWorld/Inst4-NoCP.deca
// Description:
//    tests de programme dont une instruction n'a pas de semicolon
//
// Resultats:
//    Ligne 13 : Erreur de syntaxe.
//    test_lex ne doit pas donner d'erreur.
//
// Historique:
//    cree le 05/01/2022

{
println("Hello";
}
